[project]
name = "rc-ycshao"
version = "0.1.0"
description = "API Notification System — 异步 HTTP 通知投递服务"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.scripts]
serve = "notification.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notification"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
